--- a/Views/Zgloszenia/Edit.cshtml
+++ b/Views/Zgloszenia/Edit.cshtml
@@ -25,8 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DataUtworzenia" class="control-label"></label>
-                <input asp-for="DataUtworzenia" class="form-control" />
-                <span asp-validation-for="DataUtworzenia" class="text-danger"></span>
+                <input asp-for="DataUtworzenia" class="form-control" disabled />
             </div>
             <div class="form-group">
                 <label asp-for="ProjektId" class="control-label"></label>
